Changelog
=========

2.6.3 (unreleased)
------------------

- Add registry setting for enabling/disabling indexing.
  [buchi]


2.6.2 (2019-09-12)
------------------

- Avoid sending atomic update commands with null-documents. [lgraf]


2.6.1 (2019-08-26)
------------------

- Fix 'path_depth' indexing handling, when 'path_depth' is not part of the schema. [phgross]


2.6.0 (2019-08-19)
------------------

- Use Solr Cell only for text extraction. The SearchableText is now also indexed
  using the update handler which allows atomic updates. Also fixes #137.
  [buchi]

- Fix error when trying to delete an object without a unique key. [jone]


2.5.0 (2019-07-02)
------------------

- Make sure to always update 'path_depth' if 'path' is (re)indexed.
  [lgraf]

- Handle facet_counts in solr response.
  [njohner]


2.4.0 (2019-06-13)
------------------

- Perform soft commits and wait for new searcher by default to allow near real
  time (NRT) searching.
  [buchi]

- Additionaly index metadata of files using an update command to make them
  visible as soon as possible.
  [buchi]

- Flush optimize command.
  [buchi]

- Add support for indexing path depth.
  [buchi]


2.3.2 (2019-04-29)
------------------

- Fix partial reindexing (atomic updates) for fields without a value.
  [buchi]


2.3.1 (2018-11-01)
------------------

- Fix reindexObjectSecurity patch to account for special handling of system
  roles in allowedRolesAndUsers indexer.
  [lgraf]


2.3.0 (2018-10-18)
------------------

- Patch reindexObjectSecurity to optimize indexing of large trees.
  [lgraf]

- Fix diff for items with a modification date that has no fractional seconds.
  [buchi]

- Provide an error message when raising an AttributeError in SolrDocument.
  [buchi]


2.2.0 (2018-09-21)
------------------

- Add option to synchronize Solr with catalog in maintenance view.
  [buchi]


2.1.2 (2018-05-15)
------------------

- Set Content-Type 'application/x-www-form-urlencoded' for requests to